# MidiSynth

./: .gitignore  CMakeLists.txt  Constants.h  README.md  main.cpp
Audio/: AudioEngine.cpp  AudioEngine.h  Oscillator.cpp  Oscillator.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
Interfaces/: ISoundSource.h
Midi/: MidiInput.cpp  MidiInput.h
SynthController/: SynthController.cpp  SynthController.h
rtaudio/contrib/go/rtaudio/: rtaudio_test.go
